 * Fix traversal of substreams by XPath expressions. For example, the path
   '*/*' no longer matches non-immediate child elements, and '@*' no longer
   matches the attributes of descendants.
 * Fixes for `py:match` which would get confused when it should be applied
   to multiple elements (ticket #49).
 * Using namespace prefixes in XPath expressions is now supported.


Version 0.2
http://svn.edgewall.org/repos/markup/tags/0.2.0/
(Aug 22 2006, from branches/stable/0.2.x)

 * XPath syntax errors now contain position info (ticket #20).
 * Errors in expression evaluation now contain the correct line number in the
   template (ticket #22).
 * <script> and <style> element contents are no longer escaped when using HTML
   serialization (ticket #24).
 * In some cases expressions in templates did not get interpolated (ticket
   #26).
 * CDATA sections are now passed through the pipeline and serialized correctly.
   That allows using <script> or <style> elements in XHTML output that is still
   compatible with HTML user agents.
 * The XHTML serializer now correctly handles elements in foreign namespaces
   (such as SVG or MathML).
 * Fixed relative includes in templates on Windows (ticket #27).
 * Output can be encoded using legacy codecs such as ISO-8859-1. Any character
   not representable in the chosen encoding gets replaced by the corresponding
   XML character reference.
 * String literals in XPath expressions that contain spaces are now parsed
   as expected.
 * Added support for the XPath functions boolean(), ceiling(), concat(),
   contains(), false(), floor(), normalize-space(), number(), round(),
   starts-with(), string-length(), substring(), substring-after(),
   substring-before(), translate(), and true().
 * Non-ASCII characters in expressions should now be handled correctly (ticket
   #29).
 * Default values for arguments of template functions now also work with
   constants and complex expressions (they only worked for string or number