@@ -33,6 +33,7 @@ http://svn.edgewall.org/repos/markup/tags/0.3.0/
  * Fixes for `py:match` which would get confused when it should be applied
    to multiple elements (ticket #49).
  * Using namespace prefixes in XPath expressions is now supported.
+ * Expressions now correctly handle slices (ticket #51).
 
 
 Version 0.2
